@@ -47,7 +47,6 @@ Other
 ---------------------
 
 * GITHUB#14229: Bump minimum required Java version to 25
-* GITHUB#14412: Allow skip cache factor to be updated dynamically. (Sagar Upadhyaya)
 
 ======================= Lucene 10.2.0 =======================
 
@@ -103,6 +102,8 @@ New Features
 
 * GITHUB#13470: Added `TopDocs#rrf` to combine multiple TopDocs instances using
   reciprocal rank fusion. (Haren Lin, Adrien Grand)
+
+* GITHUB#14412: Allow skip cache factor to be updated dynamically. (Sagar Upadhyaya)
 
 Improvements
 ---------------------
